--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 :root {
-    --color-primary: #FFff7e;
-    --color-secondary: #Fdfda7;
+    --color-primary: #FFD02F;
+    --color-secondary:#efed89;
     --color-tertiary: #C4C4C4;
-    --color-button: #fe652b;
+    --color-button: #e5683b;
     --color-button-hover: #882a05;
     --color-text: #444444;
     --color-white: #FFFFFF;
@@ -40,7 +40,9 @@ body {
     size-adjust: ;
 }
 
-    
+.figuraamigofeliz{
+    border-radius: 20px;
+}
 
 
 /* Seção de entrada */
@@ -153,7 +155,7 @@ ul {
 
 .result-list {
     margin-top: 15px;
-    color: #05DF05;
+    color: #f30808;
     font-size: 22px;
     font-weight: bold;
     text-align: center;
@@ -180,6 +182,7 @@ ul {
 
 .topo2{
     position: fixed; /* Fixa no topo da página */
+    flex: 30%;
     top: 0; /* Gruda no topo */
     left: 0;
     width: 100%; /* Ocupa toda a largura */
@@ -187,20 +190,49 @@ ul {
     padding: 15px 0; /* Espaçamento interno */
     text-align: center; /* Centraliza o título */
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1); 
-    font: size 75px; ;
+    font-size: 35px; ;
     font-family: "Merriweather", serif;
+    height: 120px; 
+
+.tituloheaderpg2{
+    display: flexbox;
+    flex: auto;
+
+}
+}
+
+
+
+.main-content2{
+    display: flex;
+    flex: 80%;
+    background-color: var(--color-secondary);
+    border: 1px solid #000;
+    border-radius: 65px 65px 0 0;
+    flex-direction: row;
+    align-items: center;
+    padding: 0px;
+    width: 80%;
+    height: 500px;
+    justify-content: center;
+    padding: 5px;
+    
+
 }
 
 
 .corpo2{
 min-height: 100vh;
-max-width:100vw;
+max-width: 100vw;
 display: flex;
 align-items: center;
 justify-content: center;
+overflow: hidden;
 font-family: "pacifico";
-font: size 100px;
+font: size 80px;
 background-color: var(--color-secondary);
+border-radius: 64px 64px 0 0;
+
 }
 
 
@@ -214,11 +246,25 @@ background-color: var(--color-secondary);
     text-overflow: ellipsis;
     box-sizing: border-box;
     font-family: 'pacifico';
-    font-size: 100px;
+    font-size:150px;
+    max-width:500px ; 
+    padding: 0px;
+    gap:0px;
+    border: 3px solid #000;
+    height: 230px;
+     
 
 
 }
 
+.conteiner{
+display: flex;
+gap: 30px;
+padding: 10;
+justify-content: space-around;
+text-overflow: ellipsis;
+
+}
 
 
 
