faltando apenas publicar

--- a/style.css
+++ b/style.css
@@ -41,7 +41,10 @@ body {
 }
 
 .figuraamigofeliz{
+    display: flex;
     border-radius: 20px;
+    width: 25%;
+    justify-content: center;
 }
 
 
@@ -60,7 +63,7 @@ body {
 
 /* Títulos */
 .main-title {
-    font-size: 75px;
+    font-size: 4.62rem;
     font-family: "Merriweather", serif;
     font-weight: 900;
     font-style: italic;
@@ -70,7 +73,7 @@ body {
 
 .section-title {
     font-family: "Inter", serif;
-    font-size: 36px;
+    font-size: 2.25rem;
     font-weight: 700;
     color: #000;
     margin: 10px 0;
@@ -91,7 +94,7 @@ body {
     padding: 10px;
     border: 2px solid #000;
     border-radius: 25px 0 0 25px;
-    font-size: 16px;
+    font-size: 1rem;
 }
 
 .button-container {
@@ -103,7 +106,7 @@ body {
 .input-title {
     flex: 1;
     padding: 10px 15px;
-    font-size: 16px;
+    font-size: 1rem;
     border: 2px solid #333;
     border-right: none;
     border-radius: 25px 0 0 25px;
@@ -115,7 +118,7 @@ body {
 button {
     padding: 15px 30px;
     font-family: "Inter", sans-serif;
-    font-size: 16px;
+    font-size: 1rem;
     border: 2px solid #000;
     border-radius: 25px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
@@ -149,14 +152,14 @@ ul {
     list-style-type: none;
     color: var(--color-text);
     font-family: "Inter", sans-serif;
-    font-size: 18px;
+    font-size: 1.12rem;
     margin: 20px 0;
 }
 
 .result-list {
     margin-top: 15px;
     color: #f30808;
-    font-size: 22px;
+    font-size: 1.37rem;
     font-weight: bold;
     text-align: center;
 }
@@ -169,7 +172,7 @@ ul {
     padding: 10px 40px;
     color: var(--color-white);
     background-color: var(--color-button);
-    font-size: 16px;
+    font-size: 1rem;
 }
 
 .button-draw img {
@@ -181,55 +184,60 @@ ul {
 }
 
 .topo2{
-    position: fixed; /* Fixa no topo da página */
+    position: fixed; 
     flex: 30%;
-    top: 0; /* Gruda no topo */
+    top: 0; 
     left: 0;
-    width: 100%; /* Ocupa toda a largura */
+    width: 100%; 
     background-color: var(--color-primary);
-    padding: 15px 0; /* Espaçamento interno */
-    text-align: center; /* Centraliza o título */
+    padding: 15px 0; 
+    text-align: center;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1); 
-    font-size: 35px; ;
+    font-size: 1.50rem;
     font-family: "Merriweather", serif;
     height: 120px; 
-
-.tituloheaderpg2{
-    display: flexbox;
-    flex: auto;
+    flex-direction: center;
 
 }
+.h1.tituloheaderpg2{
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-items: center;
+    
+
+
 }
+
 
 
 
 .main-content2{
-    display: flex;
-    flex: 80%;
-    background-color: var(--color-secondary);
-    border: 1px solid #000;
-    border-radius: 65px 65px 0 0;
-    flex-direction: row;
-    align-items: center;
-    padding: 0px;
-    width: 80%;
-    height: 500px;
-    justify-content: center;
-    padding: 5px;
+display: flex;
+flex: 100%;
+background-color: var(--color-secondary);
+border: 0x solid #000;
+border-radius: 0px 0px 0 0;
+flex-direction: row;
+align-items: center;
+padding: 0px;
+width: 90%;
+height: 500px;
+justify-content: center;
+padding: 20px;
     
 
 }
 
 
 .corpo2{
-min-height: 100vh;
-max-width: 100vw;
+
 display: flex;
 align-items: center;
 justify-content: center;
 overflow: hidden;
 font-family: "pacifico";
-font: size 80px;
+font-size:  5rem;
 background-color: var(--color-secondary);
 border-radius: 64px 64px 0 0;
 
@@ -241,33 +249,44 @@ border-radius: 64px 64px 0 0;
     display: flex; 
     align-items: center;
     box-sizing: border-box;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    box-sizing: border-box;
+    color:#000;
     font-family: 'pacifico';
-    font-size:150px;
-    max-width:500px ; 
+    font-size:5.5rem;
     padding: 0px;
     gap:0px;
-    border: 3px solid #000;
-    height: 230px;
-     
+    border: 0px solid #078925;
+    height: 100%;
+    width: 200%
+    
+    
+
+}
 
 
+
+
+.comemorando{
+    display:flex;
+    width: 80%;
+    align-items: center;
+    justify-content: center;
+    
 }
 
 .conteiner{
-display: flex;
-gap: 30px;
-padding: 10;
-justify-content: space-around;
-text-overflow: ellipsis;
+    display: flex;
+    gap: 10px;
+    padding: 10;
 
+    justify-content:space-between;
+    text-align: center;
+    text-overflow: ellipsis;
+    width:800px;
+    height: 100%;
 }
-
-
-
+.elemento{
+    width: 100%;
+}
 
 
 
@@ -301,3 +320,41 @@ text-overflow: ellipsis;
 .botaovoltar2:hover {
     background-color: var(--color-button-hover);
 }
+
+
+@media(max-width:900px){
+    .conteiner{
+    flex-direction:column;
+    flex-direction: center;
+    align-items: center;
+    justify-content: center;
+    width:100%;
+    height: 100%;
+}
+
+.sorteado2{
+    height: 50%;
+    width: 50%;
+    font-size: 2rem;
+}
+
+.topo2{
+padding: 30;
+font-size: 1rem;
+}
+
+.h1.tituloheaderpg2{
+width:auto;
+align-items: center;
+justify-items: center;
+}
+
+.botaovoltar2{
+width:auto;
+gap:0px;
+padding:0;
+}
+
+
+}
+    
